--- a/log4j-spring-boot/pom.xml
+++ b/log4j-spring-boot/pom.xml
@@ -19,20 +19,38 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-spring-cloud-config</artifactId>
+    <artifactId>log4j</artifactId>
     <version>2.14.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <artifactId>log4j-spring-cloud-config-client</artifactId>
+  <artifactId>log4j-spring-boot</artifactId>
   <packaging>jar</packaging>
-  <name>Apache Log4j Spring Cloud Config Client Support</name>
-  <description>Apache Log4j Spring Cloud Config Client Support</description>
+  <name>Apache Log4j Spring Boot Support</name>
+  <description>Apache Log4j Spring iBoot Support</description>
   <properties>
     <log4jParentDir>${basedir}/../..</log4jParentDir>
-    <docLabel>Log4j Spring Cloud Config Client Documentation</docLabel>
-    <projectDir>/log4j-spring-cloud-config-client</projectDir>
-    <module.name>org.apache.logging.log4j.spring.cloud.config.client</module.name>
+    <docLabel>Log4j Spring Boot Documentation</docLabel>
+    <projectDir>/log4j-spring-boot</projectDir>
+    <module.name>org.apache.logging.log4j.spring.boot</module.name>
   </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-framework-bom</artifactId>
+        <version>${springVersion}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -40,17 +58,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-spring-boot</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-config-client</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-bus</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
