--- a/log4j-spring-boot/src/main/resources/log4j2.system.properties
+++ b/log4j-spring-boot/src/main/resources/log4j2.system.properties
@@ -14,3 +14,4 @@
 # See the license for the specific language governing permissions and
 # limitations under the license.
 #
+org.springframework.boot.logging.LoggingSystem=org.apache.logging.log4j.spring.boot.Log4j2CloudConfigLoggingSystem
