--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,8 @@
     <logbackVersion>1.2.3</logbackVersion>
     <jackson1Version>1.9.13</jackson1Version>
     <jackson2Version>2.11.2</jackson2Version>
-    <springVersion>3.2.18.RELEASE</springVersion>
+    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <springVersion>5.1.8.RELEASE</springVersion>
     <kubernetes-client.version>4.6.1</kubernetes-client.version>
     <flumeVersion>1.9.0</flumeVersion>
     <disruptorVersion>3.4.2</disruptorVersion>
@@ -727,6 +728,11 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
+        <version>${springVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
         <version>${springVersion}</version>
       </dependency>
       <dependency>
@@ -1395,6 +1401,7 @@
     <module>log4j-osgi</module>
     <module>log4j-docker</module>
     <module>log4j-kubernetes</module>
+    <module>log4j-spring-boot</module>
     <module>log4j-spring-cloud-config</module>
   </modules>
   <profiles>
