--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -169,10 +169,10 @@
         <artifactId>log4j-csv</artifactId>
         <version>${project.version}</version>
       </dependency>
-      <!-- MongoDB 2 Appender Plugin -->
+      <!-- MongoDB 4 Appender Plugin -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-mongodb2</artifactId>
+        <artifactId>log4j-mongodb4</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!-- MongoDB 3 Appender Plugin -->
@@ -245,6 +245,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-kubernetes</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <!-- Spring Boot support  -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-spring-boot</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!-- Spring Cloud Config Client -->
