--- a/log4j-jul/pom.xml
+++ b/log4j-jul/pom.xml
@@ -156,8 +156,9 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
           <useJql>true</useJql>
+          <component>JUL adapter</component>
         </configuration>
       </plugin>
       <plugin>
