--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -125,8 +125,9 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
           <useJql>true</useJql>
+          <component>OSGi</component>
         </configuration>
       </plugin>
       <plugin>
