--- a/pom.xml
+++ b/pom.xml
@@ -1452,6 +1452,8 @@
           <statusIds>Resolved, Closed</statusIds>
           <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
           <useJql>true</useJql>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
+          <onlyCurrentVersion>true</onlyCurrentVersion>
         </configuration>
       </plugin>
       <plugin>
