--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -265,8 +265,9 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
           <useJql>true</useJql>
+          <component>API</component>
         </configuration>
       </plugin>
       <plugin>
