--- a/log4j-plugins/pom.xml
+++ b/log4j-plugins/pom.xml
@@ -266,8 +266,9 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
           <useJql>true</useJql>
+          <component>Plugins</component>
         </configuration>
       </plugin>
       <plugin>
