--- a/log4j-taglib/pom.xml
+++ b/log4j-taglib/pom.xml
@@ -124,8 +124,9 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
           <useJql>true</useJql>
+          <component>Taglib</component>
         </configuration>
       </plugin>
       <plugin>
