[LOG4J2-2653] Migrate part of log4j-core to JUnit 5
Backported from 3.x.

Signed-off-by: Matt Sicker <boards@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -982,6 +982,7 @@
           <configuration>
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
+            <parameters>true</parameters>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
             <encoding>UTF-8</encoding>
