[LOG4J2-2653] Migrate lookup and net tests to JUnit 5
Backported from 3.x.

Signed-off-by: Matt Sicker <boards@gmail.com>

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -212,7 +212,10 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
     <!-- Embedded JDBC drivers for database appender tests -->
     <dependency>
