--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,14 +46,6 @@ jobs:
         if: runner.os == 'Linux'
         run: ./mvnw -V -B -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 --global-toolchains .github/workflows/maven-toolchains.xml verify
 
-      - name: Publish Test Results (Linux)
-        if: runner.os == 'Linux'
-        uses: scacap/action-surefire-report@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_name: 'Test Report (Linux)'
-          report_paths: '**/*-reports/TEST-*.xml'
-
       - name: Inspect environment (Windows)
         if: runner.os == 'Windows'
         run: set java
@@ -61,14 +53,6 @@ jobs:
       - name: Build with Maven (Windows)
         if: runner.os == 'Windows'
         run: ./mvnw -V -B -e -DtrimStackTrace=false "-Dmaven.test.failure.ignore=true" "-Dsurefire.rerunFailingTestsCount=1" --global-toolchains ".github\workflows\maven-toolchains.xml" verify
-
-      - name: Publish Test Results (Windows)
-        if: runner.os == 'Windows'
-        uses: scacap/action-surefire-report@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_name: 'Test Report (Windows)'
-          report_paths: '**/*-reports/TEST-*.xml'
 
       - name: Inspect environment (MacOS)
         if: runner.os == 'macOS'
@@ -78,10 +62,15 @@ jobs:
         if: runner.os == 'macOS'
         run: ./mvnw -V -B -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true -Dsurefire.rerunFailingTestsCount=1 --global-toolchains .github/workflows/maven-toolchains.xml verify
 
-      - name: Publish Test Results (MacOS)
-        if: runner.os == 'macOS'
+      - name: Publish Test Results
         uses: scacap/action-surefire-report@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_name: 'Test Report (MacOS)'
+          check_name: Test Report (${{ matrix.os }})
           report_paths: '**/*-reports/TEST-*.xml'
+
+      - name: Upload Test Reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-reports-${{ matrix.os }}
+          path: '**/*-reports'
