--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -174,6 +174,7 @@
               junit.jupiter.execution.parallel.mode.default = concurrent
             </configurationParameters>
           </properties>
+          <forkCount>1C</forkCount>
           <reuseForks>true</reuseForks>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <excludedGroups>performance,smoke</excludedGroups>
