Update spotbugs from 3.0.x to 4.0.x
This also fixes the rest of the modules to make sure that running `mvn clean install spotbugs:spotbugs` will work without errors. This will allow for Jenkins to pick up spotbugs reports as well.

Signed-off-by: Matt Sicker <boards@gmail.com>

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -286,6 +286,14 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.0.4</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
