--- a/log4j-spring-boot/pom.xml
+++ b/log4j-spring-boot/pom.xml
@@ -28,7 +28,7 @@
   <name>Apache Log4j Spring Boot Support</name>
   <description>Apache Log4j Spring iBoot Support</description>
   <properties>
-    <log4jParentDir>${basedir}/../..</log4jParentDir>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Log4j Spring Boot Documentation</docLabel>
     <projectDir>/log4j-spring-boot</projectDir>
     <module.name>org.apache.logging.log4j.spring.boot</module.name>
