--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -31,6 +31,7 @@
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
     <projectDir>/core</projectDir>
+    <maven.doap.skip>true</maven.doap.skip>
     <!--<revapi.skip>true</revapi.skip>-->
   </properties>
   <dependencies>
