--- a/log4j-jcl/pom.xml
+++ b/log4j-jcl/pom.xml
@@ -32,6 +32,7 @@
     <docLabel>JCL Bridge Documentation</docLabel>
     <projectDir>/jcl-bridge</projectDir>
     <module.name>org.apache.logging.log4j.jcl</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
     <dependency>
