--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -34,6 +34,7 @@
     <docLabel>Cassandra Documentation</docLabel>
     <projectDir>/log4j-cassandra</projectDir>
     <module.name>org.apache.logging.log4j.cassandra</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
