--- a/log4j-couchdb/pom.xml
+++ b/log4j-couchdb/pom.xml
@@ -34,6 +34,7 @@
     <docLabel>CouchDB Documentation</docLabel>
     <projectDir>/log4j-couchdb</projectDir>
     <module.name>org.apache.logging.log4j.couchdb</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
