--- a/log4j-jdbc-dbcp2/pom.xml
+++ b/log4j-jdbc-dbcp2/pom.xml
@@ -25,6 +25,7 @@
     <docLabel>Log4j JDBC DBCP 2 Documentation</docLabel>
     <projectDir>/log4j-jdbc-dbcp2</projectDir>
     <module.name>org.apache.logging.log4j.jdbc.dbcp2</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
