--- a/log4j-liquibase/pom.xml
+++ b/log4j-liquibase/pom.xml
@@ -31,6 +31,7 @@
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Liquibase Documentation</docLabel>
     <projectDir>/liquibase</projectDir>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
     <dependency>
