--- a/log4j-mongodb4/pom.xml
+++ b/log4j-mongodb4/pom.xml
@@ -34,6 +34,7 @@
     <docLabel>MongoDB 4 Documentation</docLabel>
     <projectDir>/log4j-mongodb4</projectDir>
     <module.name>org.apache.logging.log4j.mongodb4</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
