--- a/log4j-slf4j18-impl/pom.xml
+++ b/log4j-slf4j18-impl/pom.xml
@@ -33,6 +33,7 @@
     <projectDir>/slf4j18</projectDir>
     <slf4j.version>1.8.0-beta4</slf4j.version>
     <module.name>org.apache.logging.log4j.slf4j</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
     <dependency>
