--- a/log4j-spring-boot/pom.xml
+++ b/log4j-spring-boot/pom.xml
@@ -32,6 +32,7 @@
     <docLabel>Log4j Spring Boot Documentation</docLabel>
     <projectDir>/log4j-spring-boot</projectDir>
     <module.name>org.apache.logging.log4j.spring.boot</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencyManagement>
     <dependencies>
