Only generate doap file in parent project. Revert Checkstyle plugin version change so site will build

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -32,6 +32,7 @@
     <docLabel>Core Documentation</docLabel>
     <projectDir>/core</projectDir>
     <log4j2-logstash-layout.version>0.18</log4j2-logstash-layout.version>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
     <!-- Naturally, all implementations require the log4j-api JAR -->
