--- a/log4j-jms/pom.xml
+++ b/log4j-jms/pom.xml
@@ -26,6 +26,7 @@
     <docLabel>Log4j JMS Documentation</docLabel>
     <projectDir>/log4j-jms</projectDir>
     <module.name>org.apache.logging.log4j.jms</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
