--- a/log4j-appserver/pom.xml
+++ b/log4j-appserver/pom.xml
@@ -36,6 +36,7 @@
     <tomcat.version>8.5.20</tomcat.version>
     <jetty.version>9.4.31.v20200723</jetty.version> <!--  Jetty 9 requires Java 8 -->
     <module.name>org.apache.logging.log4j.appserver</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
