--- a/log4j-redis/pom.xml
+++ b/log4j-redis/pom.xml
@@ -26,6 +26,7 @@
     <docLabel>Log4j Redis Documentation</docLabel>
     <projectDir>/log4j-redis</projectDir>
     <module.name>org.apache.logging.log4j.redis</module.name>
+    <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
   <dependencies>
