--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
     <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
     <surefire.plugin.version>2.22.2</surefire.plugin.version>
     <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
-    <checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
+    <checkstyle.plugin.version>3.0.0</checkstyle.plugin.version>
     <deploy.plugin.version>2.8.2</deploy.plugin.version>
     <rat.plugin.version>0.13</rat.plugin.version>
     <pdf.plugin.version>1.2</pdf.plugin.version>
@@ -232,6 +232,7 @@
     <manifestfile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestfile>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.doap.skip>false</maven.doap.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <docLabel>Site Documentation</docLabel>
     <projectDir />
@@ -1380,6 +1381,7 @@
             </charter>
             <pmc>https://logging.apache.org</pmc>
           </asfExtOptions>
+          <skip>${maven.doap.skip}</skip>
         </configuration>
         <executions>
           <execution>
