--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -26,7 +26,7 @@
   <description>Apache Log4j Bill of Materials</description>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-bom</artifactId>
-  <version>2.14.0-SNAPSHOT</version>
+  <version>2.14.0</version>
   <packaging>pom</packaging>
   <dependencyManagement>
     <dependencies>
@@ -215,4 +215,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <tag>log4j-2.14.0-rc1</tag>
+  </scm>
 </project>
