All project names start with "Apache Log4j".

--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -23,7 +23,7 @@
   <packaging>jar</packaging>
   <version>2.14.1-SNAPSHOT</version>
 
-  <name>Log4j Sample Configuration Service</name>
+  <name>Apache Log4j Sample Configuration Service</name>
   <description>Sample Cloud Config Server</description>
 
   <parent>
