--- a/log4j-samples/pom.xml
+++ b/log4j-samples/pom.xml
@@ -73,7 +73,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>${junitVersion}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
