--- a/log4j-layout-template-json/pom.xml
+++ b/log4j-layout-template-json/pom.xml
@@ -36,8 +36,8 @@
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Log4j Layout for JSON Template Documentation</docLabel>
-    <projectDir>/log4j-layout-json-template</projectDir>
-    <module.name>org.apache.logging.log4j.layout.json.template</module.name>
+    <projectDir>/log4j-layout-template-json</projectDir>
+    <module.name>org.apache.logging.log4j.layout.template.json</module.name>
     <maven.doap.skip>true</maven.doap.skip>
   </properties>
 
@@ -124,7 +124,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Fragment-Host>org.apache.logging.log4j.layout.json.template</Fragment-Host>
+            <Fragment-Host>org.apache.logging.log4j.layout.template.json</Fragment-Host>
             <Export-Package>*</Export-Package>
           </instructions>
         </configuration>
@@ -352,7 +352,7 @@
                     </ports>
                     <network>
                       <mode>custom</mode>
-                      <name>log4j-layout-json-template-network</name>
+                      <name>log4j-layout-template-json-network</name>
                       <alias>elasticsearch</alias>
                     </network>
                     <log>
@@ -374,7 +374,7 @@
                     </dependsOn>
                     <network>
                       <mode>custom</mode>
-                      <name>log4j-layout-json-template-network</name>
+                      <name>log4j-layout-template-json-network</name>
                       <alias>logstash</alias>
                     </network>
                     <ports>
